--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,7 @@
 	default = simple
 [rebase]
 	abbreviateCommands = true
-  autostash = true
+	autostash = true
 [url "ssh://git@github.com/"]
 	insteadOf = https://github.com/
 [alias]
@@ -41,7 +41,7 @@
 	f = fetch
 	fr = !git fetch --all && git rebase origin/main
 	fork = !git pull origin main && git push -u me main && git fetch --all -p
-	l = log --graph --date=short --decorate=short --pretty=format:'%C(auto)%h %C(auto, dim)%cd %C(auto, dim)%cn %C(auto)%s%C(auto)%d\n'
+	l = log -n 20 --graph --date=short --decorate=short --pretty=format:'%C(auto)%h %C(auto, dim)%cd %C(auto, dim)%cn %C(auto)%s%C(auto)%d\n'
 	pl = pull
 	psdo = !git rev-parse --abbrev-ref HEAD | xargs -I@ git push -d origin @
 	psfom = push -u --force-with-lease origin main
